WIP on IntelliJ Plugin